--- a/mysql/readme
+++ b/mysql/readme
@@ -89,6 +89,107 @@ select * from DemoTable1;
 use test;
 select * from DemoTable1;
 
+#---------------------------------------------------
+############# UPGRADE SLAVE 5.7 => 8
+#---------------------------------------------------
+# BEFORE
+BACKUP  SNAPSHOT VM - db and my.cnf
+cp /etc/my.cnf /etc/my.cnf.old
+cp -r /etc/percona-server.conf.d /etc/percona-server.conf.d-bkp
+cp -r /var/lib/mysql /var/lib/mysql-old
+mysqlcheck -u root -p'Ex1!SDdd3s' --all-databases --check-upgrade
+
+############## MAYBE NEED STOP SLAVE !!!!!!!!!!!!!!!!!!!!!!!
+systemctl stop mysql
+############## MAYBE NEED STOP SLAVE !!!!!!!!!!!!!!!!!!!!!!!
+sudo yum install https://repo.percona.com/yum/percona-release-latest.noarch.rpm
+sudo percona-release setup ps80 
+sudo yum install percona-server-server
+##sudo yum install percona-server-server --allowerasing
+# CHANGE CONFIGS
+cp /etc/my.cnf.old /etc/my.cnf
+cp /etc/percona-server.conf.d/mysqld.cnf.rpmsave /etc/percona-server.conf.d/mysqld.cnf
+nano /etc/percona-server.conf.d/mysqld.cnf
+# add that
+skip-networking
+skip-slave-start
+skip-log-bin
+# comment this
+#query-cache-type                 = 1   # enable cache
+#query-cache-size                 = 256M
+
+systemctl start mysqld
+После успешного старта еще раз перезапускаем сервер — уже без параметров, которые добавлялись в первом пункте.
+nano /etc/percona-server.conf.d/mysqld.cnf
+#skip-networking
+#skip-slave-start
+#skip-log-bin
+
+# CHECK UPGRADE SLAVE
+# mysqlcheck
+mysqlcheck -u root -p'PASS' -o --all-databases
+
+mysql -u root -p'PASS'
+show slave status\G
+          #Slave_IO_Running: Yes
+          #Slave_SQL_Running: Yes
+
+#### GET QUERY TIME
+use test
+SET profiling = 1;
+select * from test_table;
+SHOW PROFILES;
+
+
+#---------------------------------------------------
+############# UPGRADE MASTER 5.7 => 8
+#---------------------------------------------------
+# BEFORE
+BACKUP  SNAPSHOT VM - db and my.cnf
+cp /etc/my.cnf /etc/my.cnf.old
+cp -r /etc/percona-server.conf.d /etc/percona-server.conf.d-bkp
+cp -r /var/lib/mysql /var/lib/mysql-old
+mysqlcheck -u root -p'Ex1!SDdd3s' --all-databases --check-upgrade
+
+############## MAYBE NEED STOP SLAVE !!!!!!!!!!!!!!!!!!!!!!!
+systemctl stop mysql
+############## MAYBE NEED STOP SLAVE !!!!!!!!!!!!!!!!!!!!!!!
+sudo yum install https://repo.percona.com/yum/percona-release-latest.noarch.rpm
+sudo percona-release setup ps80 
+sudo yum install percona-server-server
+##sudo yum install percona-server-server --allowerasing
+# CHANGE CONFIGS
+cp /etc/my.cnf.old /etc/my.cnf
+cp /etc/percona-server.conf.d/mysqld.cnf.rpmsave /etc/percona-server.conf.d/mysqld.cnf
+nano /etc/percona-server.conf.d/mysqld.cnf
+# add that
+skip-networking
+skip-slave-start
+skip-log-bin
+# comment this
+#query-cache-type                 = 1   # enable cache
+#query-cache-size                 = 256M
+
+systemctl start mysqld
+После успешного старта еще раз перезапускаем сервер — уже без параметров, которые добавлялись в первом пункте.
+nano /etc/percona-server.conf.d/mysqld.cnf
+#skip-networking
+#skip-slave-start
+#skip-log-bin
+
+# CHECK UPGRADE SLAVE
+# mysqlcheck
+mysqlcheck -u root -p'PASS' -o --all-databases
+
+mysql -u root -p'PASS'
+show master status\G
+
+
+
+
+
+
+
 
 
 
